--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,21 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
+   
+      <form class="search-form" id="search-form">
+        <input
+        class="search-form__input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="search-btn">Search</button>
+      </form>
+   
 
     <div class="gallery"></div>
-    
+
     <button class="load-more" type="button" disabled>Load more...</button>
     <script type="module" src="./index.js"></script>
   </body>
